[package]
name = "old_school_jrpg_map_generator"
version = "0.1.0"
authors = ["Rowland Rose <rowlandrose@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opensimplex_noise_rs = "0.3.0"
terr = "0.1.2"
image = "0.23.11"