[package]
name = "old_school_jrpg_map_generator"
version = "0.1.0"
authors = ["Rowland Rose <rowlandrose@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opensimplex_noise_rs = "0.3.0"
terr = { git = "https://github.com/dhardy/terr" }
image = "0.23.11"
rand = "0.7.3"
rand_distr = "0.3.0"